# arcane

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CLAUDE_GUIDE.md  Dockerfile  LICENSE  PM_INTEGRATIONS.md  README.md  TODO.md  idea.txt  install.js  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  sample_config.yaml  servicepro.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  docs.yml  homebrew.yml  npm-publish.yml  release.yml  security.yml  tests.yml
arcane/: __init__.py  __main__.py  cli.py  config.py  main_cli.py  models.py
arcane/clients/: __init__.py  anthropic.py  base.py  claude.py  factory.py  gemini.py  model_selector.py  openai.py
arcane/commands/: __init__.py  refine.py
arcane/config/: __init__.py  config_manager.py  environment.py  profiles.py  settings.py
arcane/constants/: __init__.py  settings.py  templates.py
arcane/core/: __init__.py
arcane/engines/: __init__.py
arcane/generators/: __init__.py  base.py  milestone.py  orchestrator.py  skeletons.py  story.py  task.py
arcane/items/: __init__.py  base.py  epic.py  milestone.py  project.py  roadmap.py  story.py  task.py
arcane/llm_clients/: __init__.py  base.py  claude.py  gemini.py  openai.py
arcane/models/: __init__.py  outline_item.py
arcane/pages/: base.py  database.py  overview.py  velocity.py
arcane/project_management/: __init__.py  base.py  csv.py  docs.py  jira.py  linear.py  (+1 more)
docs/: CLAUDE_GUIDE.md  CLI_USAGE.md  IDEA_TEMPLATE.md  README.md  ROADMAP_APP_SUMMARY.md  api-reference.md  configuration.md  examples.md  idea-guide.md  installation.md  troubleshooting.md  usage.md
examples/: api_examples.py  idea-file-guide.txt  sample_roadmap.csv
homebrew-formula/: roadmap-notion.rb
roadmap_notion/: __init__.py  __main__.py  cli.py  generator.py  importer.py  llm_client.py  parser.py
scripts/: run-comprehensive.sh  run-simple.sh  run-solo.sh  run.sh  smoke_test.py
tests/: __init__.py  test_asana_exporter.py  test_batch_generator.py  test_cascading_context_integration.py  test_cli.py  test_completeness_checker.py  test_compression_integration.py  test_config.py  test_context_summarizer.py  test_cross_reference_validator.py  test_debug_generator.py  test_dependency_validator.py  test_export_platform.py  test_export_platform_question.py  test_extended_thinking.py  test_factory_model_selection.py  test_integration.py  test_jira_exporter.py  test_linear_exporter.py  test_model_selection_question.py  test_model_selector.py  test_models.py  test_notion_field_mapper.py  test_outline_validator.py  test_prompt_caching.py  test_prompt_compressor.py  test_refine_command.py  test_refinement_engine.py  test_semantic_integration.py  test_semantic_outline.py  test_semantic_outline_parser.py  test_story_parsing.py  test_structured_outputs.py  test_task_parsing.py  test_templates.py  test_tiered_model_integration.py  test_two_pass_story_generation.py  test_utils.py  test_validation_integration.py
web/: docker-compose.yml
web/backend/: .env.example  alembic.ini  pyproject.toml
web/backend/alembic/: env.py
web/backend/alembic/versions/: 5238fba93d43_initial_schema.py
web/backend/app/: config.py  database.py  deps.py  main.py
web/backend/app/models/: __init__.py  base.py  export_job.py  generation_job.py  pm_credential.py  project.py  roadmap.py  user.py
web/backend/app/routers/: auth.py  exports.py  generation.py  health.py  projects.py  roadmaps.py
web/backend/app/schemas/: auth.py  exports.py  generation.py  items.py  projects.py  roadmaps.py
web/backend/app/services/: ai_edit.py  auth.py  credentials.py  event_bus.py  export.py  generation.py  roadmap_items.py
web/backend/tests/: conftest.py  test_ai_edit.py  test_auth.py  test_exports.py  test_generation.py  test_health.py  test_models.py  test_projects_roadmaps.py  test_status_tracking.py
(+229 files in other folders)
